--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 
 .content {
   display: flex;
-  gap: 40px;
+  gap: 50px;
 }
 
 .area-transferencia {
@@ -57,6 +57,12 @@ body {
   --bs-table-bg-type: white;
 }
 
+.table-bordered>:not(caption)>*>* {
+  border-width: 1.4px var(--bs-border-width) !important;
+  border-color: #b222019a;
+
+}
+
 table {
   width: 100%;
   text-align: center;
@@ -68,6 +74,11 @@ table {
 td {
   padding: 12px;
   font-size: 16px;
+}
+
+.resultado-tabela {
+  max-width: 300px;
+  overflow-y: auto;
 }
 
 /* Cor alternada das linhas */
@@ -97,4 +108,8 @@ tr:nth-child(even) {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.campos-manuais {
+  margin-top: 20px;
 }
